// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MenuCheckbox matches snapshot checked 1`] = `
<li
  class=""
  role="none"
>
  <a
    class="bp6-menu-item menu-checkbox"
    role="menuitem"
    tabindex="0"
  >
    <span
      aria-hidden="true"
      class="bp6-menu-item-icon"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-tick-circle"
        tabindex="-1"
      >
        <svg
          data-icon="tick-circle"
        />
      </span>
    </span>
    <div
      class="bp6-text-overflow-ellipsis bp6-fill"
    >
      hello
    </div>
  </a>
</li>
`;

exports[`MenuCheckbox matches snapshot unchecked 1`] = `
<li
  class=""
  role="none"
>
  <a
    class="bp6-menu-item menu-checkbox"
    role="menuitem"
    tabindex="0"
  >
    <span
      aria-hidden="true"
      class="bp6-menu-item-icon"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-circle"
        tabindex="-1"
      >
        <svg
          data-icon="circle"
        />
      </span>
    </span>
    <div
      class="bp6-text-overflow-ellipsis bp6-fill"
    >
      hello
    </div>
  </a>
</li>
`;
